fix: scrollbar madness

--- a/packages/website/src/styles/main.css
+++ b/packages/website/src/styles/main.css
@@ -13,7 +13,7 @@
 }
 
 html {
-	scrollbar-gutter: auto;
+	scrollbar-gutter: auto !important;
 }
 
 html,
